# bartender-telegram-bot

./: .gitignore  pyproject.toml  settings.toml
bartender_bot/: config.py  main.py
bartender_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bartender_bot.py
